crates/djls-project/tests/snapshots/corpus__repos__djangoproject.com__releases__templatetags__date_format.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::isodate":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "releases.templatetags.date_format::tag::isodate":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: datestr
            requirement: required
            kind: Variable
          - name: dateformat
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
