crates/djls-project/tests/snapshots/corpus__repos__djangoproject.com__releases__templatetags__release_notes.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "releases.templatetags.release_notes::tag::get_latest_micro_release":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: version
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "releases.templatetags.release_notes::tag::release_notes":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: version
            requirement: required
            kind: Variable
          - name: show_version
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
